<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/view_entries_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewCurrentEntriesTitle"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            app:layout_constraintHorizontal_bias="0.5"
            android:textColor="?android:textColorPrimary"/>

    <androidx.appcompat.widget.SearchView
            android:layout_width="match_parent"
            android:layout_height="35dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/searchViewDiaryEntries"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="36dp"
            app:layout_constraintTop_toBottomOf="@+id/buttonDelete"
            app:queryHint="Search for your entry">

    </androidx.appcompat.widget.SearchView>

    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="10dp"
            android:checkedButton="@id/radioButtonNone"
            android:id="@+id/radioGroupSortOptions"
            app:layout_constraintTop_toBottomOf="@+id/textViewSortOptionsTitle"
            android:layout_marginTop="5dp">

        <RadioButton
                android:text="@string/radio_button_none_text"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:id="@+id/radioButtonNone"
                android:textSize="12sp"
                android:layout_marginVertical="0dp"
                android:paddingBottom="0dp"
                tools:ignore="TouchTargetSizeCheck,TextContrastCheck"
                android:textColor="?android:textColorPrimary"/>

        <RadioButton
                android:text="@string/radio_button_ztoa_text"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:id="@+id/radioButtonZtoA"
                android:textSize="12sp"
                android:paddingBottom="0dp"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="?android:textColorPrimary"/>

        <RadioButton
                android:text="@string/radio_button_date_text"
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:id="@+id/radioButtonDate"
                android:textSize="12sp"
                android:paddingBottom="0dp"
                tools:ignore="TouchTargetSizeCheck"
                android:textColor="?android:textColorPrimary"/>
    </RadioGroup>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDiaryEntries"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:visibility="visible"
            app:layout_constraintTop_toBottomOf="@+id/searchViewDiaryEntries"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="10dp"
            app:layout_constrainedHeight="true"
            android:scrollbars="horizontal"
            />

    <TextView
            android:text="@string/radio_group_title_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewSortOptionsTitle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentEntriesTitle"
            android:layout_marginEnd="20dp"
            android:textColor="?android:textColorPrimary"/>

    <Button
            android:text="@string/delete_button_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonDelete"
            app:layout_constraintTop_toBottomOf="@+id/textViewCurrentEntriesTitle"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toStartOf="@+id/radioGroupSortOptions"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="TextContrastCheck"
            android:layout_marginStart="100dp" />


</androidx.constraintlayout.widget.ConstraintLayout>