<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/editTextDiaryEntryTitle"
            android:hint="@string/diary_entry_title_hint"
            android:importantForAutofill="no"
            tools:ignore="TextContrastCheck,TouchTargetSizeCheck"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDateDisplay"
            android:layout_marginTop="8dp" />

    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:gravity="start|top"
            android:windowSoftInputMode="stateVisible|adjustResize"
            android:ems="10"
            android:id="@+id/editTextDiaryEntryContent"
            tools:ignore="SpeakableTextPresentCheck,DuplicateSpeakableTextCheck,TextContrastCheck"
            android:importantForAutofill="no"
            android:hint="@string/edit_text_entry_content_hint"
            android:paddingBottom="180dp"
            app:layout_constraintTop_toBottomOf="@+id/imageViewAttachedImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    <TextView
            android:text="@string/create_diary_entry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDiaryEntryTitle"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="4dp"
            android:textColor="?android:textColorPrimary"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewDateDisplay"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewDiaryEntryTitle"
            android:layout_marginTop="12dp"
            android:textSize="17sp"
            app:layout_constraintHorizontal_bias="0.5"
            android:textColor="?android:textColorPrimary"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/ic_add_new"
            android:id="@+id/fabDisplayActions"
            android:tint="?android:textColorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/fab_display_actions_description"
            />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            app:srcCompat="@drawable/ic_insert"
            android:contentDescription="@string/fab_create_entry_description"
            android:tint="?android:textColorPrimary"
            android:id="@+id/fabCreateEntry"
            app:layout_constraintEnd_toEndOf="@+id/fabDisplayActions"
            app:layout_constraintBottom_toTopOf="@+id/fabDisplayActions"
            android:layout_marginBottom="2dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            android:contentDescription="@string/attach_image_to_entry"
            app:srcCompat="@drawable/ic_image"
            android:tint="?android:textColorPrimary"
            android:id="@+id/fabAttachImage"
            app:layout_constraintEnd_toEndOf="@+id/fabCreateEntry"
            app:layout_constraintBottom_toTopOf="@+id/fabCreateEntry"
            android:layout_marginBottom="2dp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:visibility="invisible"
            android:contentDescription="@string/clear_the_text_fields"
            app:srcCompat="@drawable/ic_clear"
            android:id="@+id/fabClearFields"
            app:layout_constraintEnd_toEndOf="@+id/fabAttachImage"
            app:layout_constraintBottom_toTopOf="@+id/fabAttachImage"
            android:layout_marginBottom="2dp" />

    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            android:id="@+id/imageViewAttachedImage"
            android:contentDescription="Attached Image"
            app:layout_constraintTop_toBottomOf="@+id/editTextDiaryEntryTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintDimensionRatio="1:0.5"/>

</androidx.constraintlayout.widget.ConstraintLayout>